# onboarding-lab-4

./: CMakeLists.txt  ReadMe.md  vcpkg-configuration.json  vcpkg.json
dv/: CMakeLists.txt  exercise1.cpp  exercise2.cpp  exercise3.cpp  exercise4.cpp
rtl/: CMakeLists.txt  Exercise1.sv  Exercise2.sv  Exercise3.sv  Exercise4.sv
rtl/Mysteries/: Mystery1.sv  Mystery2.sv
